# ShelfSync

./: README.md  index.html  package.json  pnpm-lock.yaml
src/: App.tsx  main.tsx  theme.ts  types.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: db.rs  error.rs  lib.rs  main.rs  server.rs
src-tauri/src/commands/: library.rs  mod.rs  network.rs
src-tauri/src/core/: db.rs  mod.rs  progress.rs  sync.rs
src-tauri/src/http/: server.rs
src-tauri/src/models/: mod.rs
src/components/: BookCard.tsx  Discovery.tsx  EmptyState.tsx  Footer.tsx  PinModal.tsx  QueueOverlay.tsx  RoleSelection.tsx  SearchBar.tsx  SkipLink.tsx  SortMenu.tsx
src/components/Feedback/: LoadingSpinner.tsx
src/components/ui/: color-mode.tsx  toaster.tsx
src/context/: DiscoveryContext.tsx  LibraryContext.tsx
src/features/: RoleSelection.tsx
src/features/client/: ClientDashboard.tsx
src/features/discovery/: Discovery.tsx
src/features/host/: HostDashboard.tsx
src/hooks/: useLibraryQuery.ts
src/services/: api.ts  local-db.ts
src/styles/: utopia.css
