[package]
name = "shelfsync"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"
default-run = "shelfsync"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "shelfsync_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
axum = "0.8.8"
tokio = { version = "1.49.0", features = ["full"] }
tower-http = { version = "0.6.8", features = ["cors"] }
mdns-sd = "0.17.1"
local-ip-address = "0.6.9"
tauri-plugin-fs = "2"
tauri-plugin-dialog = "2"
tauri-plugin-store = "2"
uuid = { version = "1.19.0", features = ["v4", "fast-rng"] }
tokio-util = { version = "0.7.18", features = ["io"] }
hostname = "0.4.2"
image = "0.25.9"
log = "0.4.29"
env_logger = "0.11.8"
thiserror = "2.0.17"
rand = "0.9.2"
zip = "2.2.3"
reqwest = { version = "0.12", features = ["stream", "json"] }
tauri-plugin-notification = "2"
tauri-plugin-http = "2"
futures-util = "0.3"

[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
rusqlite = { version = "0.31.0", features = ["bundled"] }

[target.'cfg(any(target_os = "android", target_os = "ios"))'.dependencies]
tauri-plugin-sql = { version = "2", features = ["sqlite"] }

[dev-dependencies]
axum-test = "18.6.0"
tempfile = "3.24.0"

